# personalRAG

./: Compose.yml  Makefile  README.md  compose.dev.yml  compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  compose.yml  main.py  pyproject.toml
backend/api/: admin.py  deps.py  ingest.py  query.py  ratelimit.py
backend/controllers/: config.py  db.py  doc_loader.py  lc_client.py  vector_store.py
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: Modal.tsx
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  PapersPage.tsx  PublicationsPage.tsx
